# anima

./: .gitconfig  .gitignore  Makefile  README.md  networks.ts  package.json  rollup.config.js  tick.ts
.github/workflows/: release-mac.yaml  release-win.todo
assets/: colors.rtf
autoupdater/: autoupdater_payload.json  autoupdater_payload_canary.json
public/: global.css  index.html  my_theme.less
seed_peers/: fullnode_seed_playlist.json  fullnode_seed_playlist_devnet.json  fullnode_seed_playlist_local.json
src/: App.svelte  accountActions.ts  debug.ts  main.ts  networks.ts  queries.ts  routes.ts  tick.ts  version.ts  walletError.ts  walletErrorUI.ts  windowTitle.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app_cfg.rs  configs.rs  configs_network.rs  configs_profile.rs  key_manager.rs  keys.rs  main.rs  mnemonic.rs  query.rs  rpc_playlist.rs  transactions.rs  wallet_error.rs
src-tauri/src/api/: api.rs  mod.rs  queries.rs  query.rs  transactions.rs
src-tauri/src/commands/: app_version.rs  mod.rs  networks.rs  preferences.rs  query.rs  query_interfaces.rs  wallets.rs
src/components/: Nav.svelte
src/components/about/: About.svelte  AboutLink.svelte
src/components/account/: Account.svelte  Transfer.svelte
src/components/dev/: DebugActions.svelte  DebugCard.svelte  DebugRootState.svelte  DebugSwitchTestMainnet.svelte  DebugSwitcher.svelte  DevMode.svelte
src/components/events/: Events.svelte  EventsTable.svelte  PageNumber.svelte
src/lang/: i18n.ts
src/style/: anima_theme.less
(+21 files in other folders)
