[package]
name = "tauri-wallet"
version = "0.0.1"
description = "a crypto wallet template"
authors = ["you"]
license = ""
repository = ""
default-run = "tauri-wallet"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }
built = { version = "0.5.1", features = ["git2"] }

[dependencies]
tauri = { version = "1.0.0-rc.5", features = ["api-all"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "^2.1", features = [ "serde" ] }
keyring = "0.10.1"
anyhow = "^1.0"
bip32 = "0.3.0"
rand = "^0.7"
rand_core = "0.6.3"
reqwest = { version = "0.11.6", features = ["blocking"] }
hex = "0.4.3"
dirs = "4.0.0"
toml = "0.5.8"

aptos-keygen = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "bedc99f124f162a898b5330ddc9537b27510fdfd"}


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
